# py-push-arrivals-and-departures

./: .gitignore  cloudbuild.yaml  main.py  pyproject.toml  test_main.py
templates/: arrivals_and_departures_fr.txt
