[tool.poetry]
name = "py-push-arrivals-and-departures"
version = "1.0.0"
description = ""
authors = ["Alyosha <alyosha@30emeciel.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
firebase-admin = "^4.4.0"
slack-sdk = "^3.2.1"
python-box = "^5.3.0"
core = { git = "https://github.com/30emeciel/py-core.git", branch="v1"}


[tool.poetry.dev-dependencies]
python-dotenv = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
